[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Stats/PlayerStatsUI.gd" type="Script" id=1]
[ext_resource path="res://PixelArt/UI/hearts_empty.png" type="Texture" id=2]
[ext_resource path="res://PixelArt/UI/hearts_full.png" type="Texture" id=3]
[ext_resource path="res://PixelArt/UI/hearts_half.png" type="Texture" id=4]

[node name="PlayerStatsUI" type="Control"]
anchor_left = 0.011
anchor_top = 0.012
anchor_right = 0.171
anchor_bottom = 0.069
margin_left = -0.248
margin_top = 0.159999
margin_right = -21.128
margin_bottom = -4.08
rect_scale = Vector2( 1.3, 1.3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIHalf" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
